[package]
name = "lawn"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0", features = ["derive"] }
bitcode = "0.6.7"
fallible-iterator = { version = "0.3", features = ["std"] }
serde = { optional = true, version = "1.0", features = ["derive"] }
serde-saphyr = { optional = true, git = "https://github.com/bourumir-wyngs/serde-saphyr" }
typetag = { optional = true, version = "0.2" }

[features]
serde = ["dep:serde", "dep:serde-saphyr", "dep:typetag"]

[dev-dependencies]
nanorand = "0.8"
divan = "0.1"
pretty_assertions = "1.4"

[[bench]]
name = "main"
harness = false
