[package]
name = "lawn"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["std", "backtrace"] }
bincode = { version = "2.0", features = ["derive"] }
fallible-iterator = { version = "0.3", features = ["std"] }
parking_lot = { version = "0.12.5", features = ["hardware-lock-elision"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
nanorand = "0.8"
pretty_assertions = "1.4"
serde-saphyr = { git = "https://github.com/bourumir-wyngs/serde-saphyr" }
